RESOLVED FIXED48155
Fix assert when a NetscapePluginModule loses its last NetscapePlugin.
https://bugs.webkit.org/show_bug.cgi?id=48155
Summary Fix assert when a NetscapePluginModule loses its last NetscapePlugin.
Anders Carlsson
Reported 2010-10-22 14:42:19 PDT
Fix assert when a NetscapePluginModule loses its last NetscapePlugin.
Attachments
Patch (3.67 KB, patch)
2010-10-22 14:44 PDT, Anders Carlsson
aroben: review+
Anders Carlsson
Comment 1 2010-10-22 14:44:33 PDT
Adam Roben (:aroben)
Comment 2 2010-10-22 14:47:52 PDT
Comment on attachment 71596 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=71596&action=review > WebKit2/ChangeLog:16 > + Set m_sInitialized to false. Typo: m_sInitialized. Can you make a test? It would be nice to say what assertion was failing and when. Then we'll have a hope of reproducing this in the future if we need to.
Anders Carlsson
Comment 3 2010-10-22 14:50:29 PDT
(In reply to comment #2) > (From update of attachment 71596 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=71596&action=review > > > WebKit2/ChangeLog:16 > > + Set m_sInitialized to false. > > Typo: m_sInitialized. > > Can you make a test? This is already tested in LayoutTests/plugins. > It would be nice to say what assertion was failing and when. Then we'll have a hope of reproducing this in the future if we need to. Sure!
Anders Carlsson
Comment 4 2010-10-22 15:16:41 PDT
Note You need to log in before you can comment on or make changes to this bug.