WebKit2/WebProcess/Plugins/Netscape/NetscapePluginModule.cpp
@@ -53,6 +53,11 @@ NetscapePluginModule::~NetscapePluginModule()
 
 void NetscapePluginModule::pluginCreated()
 {
+    if (!m_pluginCount) {
+        // Load the plug-in module if necessary.
+        load();
+    }
+        
     m_pluginCount++;
 }
 
@@ -61,8 +66,10 @@ void NetscapePluginModule::pluginDestroyed()
     ASSERT(m_pluginCount > 0);
     m_pluginCount--;
     
-    if (!m_pluginCount)
+    if (!m_pluginCount) {
         shutdown();
+        unload();
+    }
 }
 
 void NetscapePluginModule::shutdown()
@@ -70,6 +77,8 @@ void NetscapePluginModule::shutdown()
     ASSERT(m_isInitialized);
 
     m_shutdownProcPtr();
+
+    m_isInitialized = false;
 
     size_t pluginModuleIndex = initializedNetscapePluginModules().find(this);
     ASSERT(pluginModuleIndex != notFound);
@@ -98,6 +107,11 @@ PassRefPtr<NetscapePluginModule> NetscapePluginModule::getOrCreate(const String&
 
 bool NetscapePluginModule::load()
 {
+    if (m_isInitialized) {
+        ASSERT(initializedNetscapePluginModules().find(this) != notFound);
+        return true;
+    }
+
     if (!tryLoad()) {
         unload();
         return false;
@@ -148,6 +162,8 @@ bool NetscapePluginModule::tryLoad()
 
 void NetscapePluginModule::unload()
 {
+    ASSERT(!m_isInitialized);
+
     m_module = 0;
 }
 
